# V2R4A3

./: .env.example  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
docs/: A3_video2npz_pipeline.md
scripts/: convert_to_robot.py  extract_pose.py  generate_video.py  pkl_to_jsonl.py  run_pipeline.py  visualize.py
video2robot/: __init__.py  cli.py  config.py  pipeline.py  utils.py
video2robot/pose/: __init__.py  extractor.py  tracks.py
video2robot/robot/: __init__.py  retargeter.py
video2robot/video/: __init__.py  prompts.py  sora_client.py  veo_client.py
video2robot/visualization/: __init__.py  robot_viser.py
web/: __init__.py  app.py  tasks.py  viser_manager.py
web/routers/: files.py  pipeline.py  projects.py  viser.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: index.html
