[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video2robot"
version = "0.1.0"
description = "Video to Robot Motion Pipeline - End-to-end conversion from video/prompt to robot motion"
readme = "README.md"
license = {text = "MIT for core code; includes PromptHMR (Non-Commercial Scientific Research Use Only) which restricts commercial use"}
requires-python = ">=3.10"
authors = [
    {name = "AIM-Intelligence", email = "ty8352@snu.ac.kr"}
]
keywords = ["robotics", "motion-retargeting", "video-processing", "smplx", "humanoid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "joblib>=1.3.0",
    "scipy>=1.10.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/AIM-Intelligence/video2robot"
Repository = "https://github.com/AIM-Intelligence/video2robot"

[project.scripts]
video2robot = "video2robot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["video2robot*"]

[tool.setuptools.package-data]
video2robot = ["*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

